Adding a location API and concept. (#536)
